# CFO-Sync

./: .gitignore  AGENTS.md  Abrir_CFO_Sync.bat  CHANGELOG.md  Iniciar_CFO_Sync_Automatico.bat  README.md  depara.txt  exemple.js  exemple.json  launcher_desktop.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
agents/: deploy.md  dev.md  gauss.md  qa.md  release-flow.md  security.md
docs/: infra-deploy-ambientes.md  release-deploy-runbook.md
installer/: CFO-Sync.iss
scripts/task_scheduler/: README.md  google_ads_dia_anterior.ps1  google_ads_dia_atual_e_anterior.py  invoke_sync.ps1  mercado_livre_mes_atual_3_anteriores.py  run_3x_dia.ps1  (+15 more)
settings/: desktop_settings.json  docker-compose.server.yml  setup_docker_server.ps1  update_config.json
tests/: test_bling_registration_export.py  test_mercado_pago_api.py  test_mercado_pago_integration.py  test_mercado_pago_oauth.py  test_meta_ads_resilience.py  test_omie_financeiro_open_titles.py  test_pagarme_api.py  test_pagarme_integration.py  test_pagarme_segmented_jobs.py  test_server_jobs_snapshot.py  test_sheets_exporter_scope_filters.py  test_tiktok_ads_campaigns.py  test_tiktok_shop_collect_only.py
tools/: build_macos_package.sh  build_windows_package.ps1  changelog_extract.py  gauss_server_report.ps1  install_gauss_report_task.ps1  install_omie_categorias_daily_task.ps1  run_python.ps1  run_server.ps1  server_access.example.json
ttk_api/: 00_Utilitarios.js  01_TikTokAPI.js  02_ConfigManager.js  03_DataProcessor.js  04_Aggregator.js  05_SheetManager.js  06_Logger.js  07_Main.js  08_WebApp.js
(+27 files in other folders)
