[project]
name = "cfo-sync"
version = "1.3.7"
description = "App local modular para coleta de APIs e exportação para Google Sheets"
requires-python = ">=3.11"

dependencies = [
  "google-api-python-client==2.166.0",
  "google-auth==2.38.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
